--- a/src/main/resources/templates/people/show.html
+++ b/src/main/resources/templates/people/show.html
@@ -12,6 +12,7 @@
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 
 <form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+    <input type="hidden" name="_method" value="delete"/>
     <input type="submit" value="Delete"/>
 </form>
 </body>
